# env

./: .bash_profile  .bashrc  .tmux.conf  .vimrc  README.md  astyle.txt  envSetup.sh  gitTips.txt  macTips.txt  rpi.sh  shellTips.txt  sourceInsightConfig.CF3  vimTips.txt
python/matplot/: data.csv  matplot_sample.py
python/wrapper_call_executable/: CMakeLists.txt  wrapper.py
python/wrapper_call_executable/src/: cvtColor.cpp
scripts/: adb_over_wifi.sh  findFileAndDoSomething.sh  rpi.sh  systrace_profile.sh
tool/: binary2CArray.sh  editVideoTime.sh  resizeImage.sh
